src/objects/Project_Zone_Contact_SOSP__c.object
<CustomObject>
    <description>List of Contact for a specific Project</description>
    <fields>
        <fullName>Bad_Phone_Numbers__c</fullName>
        <label>Bad Phone Numbers</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Last_Activity_Date__c</fullName>
        <formula>Contact__r.LastActivityDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Last Activity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Project Zone Contacts</relationshipLabel>
        <relationshipName>Project_Zone_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cope_Pladged__c</fullName>
        <formula>! ISNULL(Contact__r.Cope_Payment_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cope Pledged</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dispatcher_Assigned_Code__c</fullName>
        <label>Dispatcher Assigned Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Field_Work_Notes__c</fullName>
        <label>Field Work Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>June_5_Action__c</fullName>
        <formula>Contact__r.IsJune5Action__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>June 5 Action</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Languages__c</fullName>
        <formula>IF(INCLUDES( Contact__r.Languages__c , &quot;ENGLISH&quot;), &quot;ENGLISH,&quot;, NULL) + &apos; &apos; + 
IF(INCLUDES( Contact__r.Languages__c , &quot;SPANISH&quot;), &quot;SPANISH,&quot;, NULL) + &apos; &apos; + 
IF(INCLUDES(Contact__r.Languages__c, &quot;RUSSIAN&quot;), &quot;RUSSIAN,&quot;, NULL) + &apos; &apos; + 
IF(INCLUDES(Contact__r.Languages__c , &quot;HMONG&quot;), &quot;HMONG,&quot;, NULL) + &apos; &apos; + 
IF(INCLUDES(Contact__r.Languages__c , &quot;CANTONESE&quot;), &quot;CANTONESE,&quot;, NULL) + &apos; &apos; + 
IF(INCLUDES(Contact__r.Languages__c , &quot;MANDARIN&quot;), &quot;MANDARIN,&quot;, NULL) + &apos; &apos; + 
IF(INCLUDES(Contact__r.Languages__c , &quot;VIETNAMESE&quot;), &quot;VIETNAMESE,&quot;, NULL) + &apos; &apos; + 
IF(INCLUDES(Contact__r.Languages__c , &quot;FARSI&quot;), &quot;FARSI,&quot;, NULL) + &apos; &apos; + 
IF(INCLUDES(Contact__r.Languages__c , &quot;KOREAN&quot;), &quot;KOREAN,&quot;, NULL) + &apos; &apos; + 
IF(INCLUDES(Contact__r.Languages__c , &quot;TAGALOG&quot;), &quot;TAGALOG,&quot;, NULL) + &apos; &apos; + 
IF(INCLUDES(Contact__r.Languages__c , &quot;ARMENIAN&quot;), &quot;ARMENIAN,&quot;, NULL) + &apos; &apos; + 
IF(INCLUDES(Contact__r.Languages__c , &quot;ERITREAN&quot;), &quot;ERITREAN,&quot;, NULL) + &apos; &apos; + 
IF(INCLUDES(Contact__r.Languages__c , &quot;AMERICAN SIGN&quot;), &quot;AMERICAN SIGN,&quot;, NULL)+ &apos; &apos; + 
IF(INCLUDES(Contact__r.Languages__c , &quot;ARABIC&quot;), &quot;ARABIC,&quot;, NULL)+ &apos; &apos; + 
IF(INCLUDES(Contact__r.Languages__c , &quot;CAMBODIAN&quot;), &quot;CAMBODIAN,&quot;, NULL)+ &apos; &apos; + 
IF(INCLUDES(Contact__r.Languages__c , &quot;CHINESE&quot;), &quot;CHINESE,&quot;, NULL)+ &apos; &apos; + 
IF(INCLUDES(Contact__r.Languages__c , &quot;FRENCH&quot;), &quot;FRENCH,&quot;, NULL)+ &apos; &apos; + 
IF(INCLUDES(Contact__r.Languages__c , &quot;HINDI&quot;), &quot;HINDI,&quot;, NULL)+ &apos; &apos; + 
IF(INCLUDES(Contact__r.Languages__c , &quot;KHMER (CAMBODIAN)&quot;), &quot;KHMER (CAMBODIAN),&quot;, NULL)+ &apos; &apos; + 
IF(INCLUDES(Contact__r.Languages__c , &quot;KINYARWANDA&quot;), &quot;KINYARWANDA,&quot;, NULL)+ &apos; &apos; + 
IF(INCLUDES(Contact__r.Languages__c , &quot;LAO&quot;), &quot;LAO,&quot;, NULL)+ &apos; &apos; + 
IF(INCLUDES(Contact__r.Languages__c , &quot;MIEN&quot;), &quot;MIEN,&quot;, NULL)+ &apos; &apos; + 
IF(INCLUDES(Contact__r.Languages__c , &quot;NON-ENGLISH&quot;), &quot;NON-ENGLISH,&quot;, NULL)+ &apos; &apos; + 
IF(INCLUDES(Contact__r.Languages__c , &quot;OTHER CHINESE&quot;), &quot;OTHER CHINESE,&quot;, NULL)+ &apos; &apos; + 
IF(INCLUDES(Contact__r.Languages__c , &quot;OTHER CHINESE LANGUAGES&quot;), &quot;OTHER CHINESE LANGUAGES,&quot;, NULL)+ &apos; &apos; + 
IF(INCLUDES(Contact__r.Languages__c , &quot;OTHER NON-ENGLISH&quot;), &quot;OTHER NON-ENGLISH,&quot;, NULL)+ &apos; &apos; + 
IF(INCLUDES(Contact__r.Languages__c , &quot;PERSIAN&quot;), &quot;PERSIAN,&quot;, NULL)+ &apos; &apos; + 
IF(INCLUDES(Contact__r.Languages__c , &quot;POLL&quot;), &quot;POLL,&quot;, NULL)+ &apos; &apos; + 
IF(INCLUDES(Contact__r.Languages__c , &quot;PUNJABI&quot;), &quot;PUNJABI,&quot;, NULL)+ &apos; &apos; + 
IF(INCLUDES(Contact__r.Languages__c , &quot;SAMOAN&quot;), &quot;SAMOAN,&quot;, NULL)+ &apos; &apos; + 
IF(INCLUDES(Contact__r.Languages__c , &quot;SIGN-AMERICAN&quot;), &quot;SIGN-AMERICAN,&quot;, NULL)+ &apos; &apos; + 
IF(INCLUDES(Contact__r.Languages__c , &quot;THAI&quot;), &quot;THAI,&quot;, NULL)+ &apos; &apos; + 
IF(INCLUDES(Contact__r.Languages__c , &quot;TIGRINYA&quot;), &quot;TIGRINYA&quot;, NULL)</formula>
        <label>Languages</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Phone_Bank_Task_Subject__c</fullName>
        <formula>TEXT(Contact__r.Last_Phone_Bank_Task_Subject__c)</formula>
        <label>Last Task Subject</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_City__c</fullName>
        <formula>Contact__r.MailingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mailing City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <formula>Contact__r.MobilePhone</formula>
        <label>Mobile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <formula>Contact__r.FirstName  + &apos; &apos; + Contact__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <formula>Contact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectID__c</fullName>
        <formula>Project_Zone__r.Project__r.Id</formula>
        <label>ProjectID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectZoneGroupID__c</fullName>
        <formula>Project_Zone__r.Project_Zone_Group__r.Id</formula>
        <label>ProjectZoneGroupID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Packet__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Packet</label>
        <referenceTo>Project_Packet_SOSP__c</referenceTo>
        <relationshipLabel>Project Zone Contacts</relationshipLabel>
        <relationshipName>Project_Zone_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Zone_ID__c</fullName>
        <formula>Project_Packet__r.Project_Zone__c</formula>
        <label>Project Zone ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Zone__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Project Zone</label>
        <referenceTo>Project_Zone_SOSP__c</referenceTo>
        <relationshipLabel>Project Zone Contacts</relationshipLabel>
        <relationshipName>Project_Zone_Contacts</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <formula>Project_Zone__r.Project__r.Name</formula>
        <label>Project</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Phone1__c</fullName>
        <formula>Contact__r.Secondary_Phone1__c</formula>
        <label>Secondary Phone1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Phone2__c</fullName>
        <formula>Contact__r.Secondary_Phone2__c</formula>
        <label>Secondary Phone2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signed_Date_MC__c</fullName>
        <formula>Contact__r.Signed_Membership_Card_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Signed Date (MC)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Signed_MC__c</fullName>
        <formula>Contact__r.Signed_Membership_Card__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Signed (MC)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Call - Verbal Supporter</fullName>
                </value>
                <value>
                    <fullName>Call - Not Home</fullName>
                </value>
                <value>
                    <fullName>Call - Bad Number</fullName>
                </value>
                <value>
                    <fullName>Call - Language Barrier</fullName>
                </value>
                <value>
                    <fullName>Call - No Client (NLE)</fullName>
                </value>
                <value>
                    <fullName>Call - Fixed Address</fullName>
                </value>
                <value>
                    <fullName>Visit - Signed Card</fullName>
                </value>
                <value>
                    <fullName>Visit - Not Home</fullName>
                </value>
                <value>
                    <fullName>Visit - Language Barrier</fullName>
                </value>
                <value>
                    <fullName>Visit- No Client (NLE)</fullName>
                </value>
                <value>
                    <fullName>Refused</fullName>
                </value>
                <value>
                    <fullName>Switch</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Zipcode5__c</fullName>
        <formula>Contact__r.Zipcode5__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Zipcode5</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZoneID__c</fullName>
        <formula>Project_Packet__r.Project_Zone__r.Zone_p__r.Id</formula>
        <label>ZoneID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zone_Group_Coordinator__c</fullName>
        <formula>Project_Zone__r.Project_Zone_Group__r.Zone_Group_Coordinator__c</formula>
        <label>Zone Group Coordinator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zone_Group__c</fullName>
        <formula>Project_Zone__r.Project_Zone_Group__r.Zone_Group__r.Name</formula>
        <label>Zone Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zone__c</fullName>
        <formula>Project_Zone__r.Zone_p__r.Name</formula>
        <label>Zone</label>
        <type>Text</type>
    </fields>
    <label>Project Zone Contact</label>
    <nameField>
        <displayFormat>P-{0000}</displayFormat>
        <label>Project ZoneContact ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Zone Contacts</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>